src/ui/snapshots/cornercase__ui__todo__tests__drawing__a_long_list_shows_how_many_are_hidden.snap
---
source: src/ui/todo.rs
assertion_line: 481
expression: "render(&v, None).backend()"
---
" TODO 20                             ×  "
"                                        "
"  ○  task 0                             "
"  ○  task 1                             "
"  ○  task 2                             "
"  ○  task 3                             "
"  ○  task 4                             "
"  ○  task 5                             "
"  ○  task 6                             "
"  ○  task 7                             "
"  ○  task 8                             "
"  ○  task 9                             "
"  ↓ 10 more                             "
"  + New TODO                            "
