src/ui/snapshots/cornercase__ui__todo__tests__drawing__a_new_item_field_shows_the_cursor.snap
---
source: src/ui/todo.rs
assertion_line: 468
expression: t.backend()
---
" TODO 2                 clear done   ×  "
"                                        "
"  ○  fix the login bug in safari        "
"     when the cookie expires            "
"  ○  write docs                         "
"  ✓  renew the domain                   "
"                                        "
"  +  call the bank                      "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
