src/ui/snapshots/cornercase__ui__todo__tests__drawing__dragging_draws_a_line_where_it_lands.snap
---
source: src/ui/todo.rs
assertion_line: 475
expression: "render(&v, None).backend()"
---
" TODO 2                 clear done   ×  "
"                                        "
" ────────────────────────────────────── "
"  ○  fix the login bug in safari        "
"     when the cookie expires            "
"  ○  write docs                         "
"  ✓  renew the domain                   "
"                                        "
"  + New TODO                            "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
