src/ui/snapshots/cornercase__ui__todo__tests__drawing__the_list.snap
---
source: src/ui/todo.rs
expression: "render(&list(), None).backend()"
---
" todo 2                 clear done   ×  "
"                                        "
"  ○  fix the login bug in safari        "
"     when the cookie expires            "
"  ○  write docs                         "
"  ✓  renew the domain                   "
"                                        "
"  + new todo                            "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
